@@ -1,6 +1,9 @@
 * What is new in gsl-2.6:
 
-** added gsl_spmatrix_scale_columns() and gsl_spmatrix_scale_rows()
+** updated spmatrix module
+   - added routines and data structures for all types (float,uint,char,...)
+   - added gsl_spmatrix_scale_columns() and gsl_spmatrix_scale_rows()
+   - more efficient reallocation of COO/triplet matrices (no longer rebuilds binary tree)
 
 ** add routines for banded Cholesky decomposition (gsl_linalg_cholesky_band_*)
 
